--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+# NOTE: No python 3.11 due to numba incompatility
+#       (need unreleased v0.57.0 - https://github.com/numba/numba/issues/8841)
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -7,7 +10,7 @@ name = "hyperspec"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.11"
 license = "MIT"
 keywords = []
 authors = [
@@ -18,7 +21,6 @@ classifiers = [
   "Programming Language :: Python",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
@@ -43,6 +45,7 @@ Source = "https://github.com/unknown/hyperspec"
 path = "hyperspec/__about__.py"
 
 [tool.hatch.envs.default]
+python = "3.10"
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
@@ -60,7 +63,7 @@ cov = [
 ]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.9", "3.10", "3.11"]
+python = ["3.9", "3.10"]
 
 [tool.hatch.envs.lint]
 detached = false
