--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "zarr>=2.14.2",
     "typer>=0.7.0",
     "imutils>=0.5.4",
-    "numba>=0.56.4"
+    "numba>=0.56.4",
+    "scikit-learn>=1.2.2"
 ]
 
 [project.urls]
