--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,8 @@
-
 site_name: hyperspec
-# repo_url: https://github.com/wytamma/write-the
-
+repo_url: https://github.com/smutch/hyperspec
 theme:
   name: "material"
-  # homepage: https://write-the.wytamma.com
+  homepage: smutch.github.io/hyperspec
   # logo: assets/logo.png
   # favicon: images/favicon.png
   palette: 
